--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '26.0.2'
+    compileSdkVersion 29
+    buildToolsVersion '29.0.2'
 
     defaultConfig {
         applicationId "com.amazonaws.devicefarm.android.referenceapp"
-        minSdkVersion 10
-        targetSdkVersion 22
+        minSdkVersion 23
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
     }
     buildTypes {
@@ -24,8 +24,6 @@ android {
     }
 
 
-
-
     lintOptions {
         abortOnError false
     }
@@ -33,30 +31,33 @@ android {
 
 repositories {
     mavenCentral()
+    google()
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.android.support:cardview-v7:21.0.3'
-    compile 'com.android.support:appcompat-v7:22.2.1'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:support-v4:22.2.1'
-    compile 'com.google.android.gms:play-services-location:7.5.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.jakewharton:butterknife:6.1.0'
+    implementation 'com.google.code.gson:gson:2.3.1'
+    implementation "androidx.cardview:cardview:1.0.0"
+    def appcompat_version = "1.2.0"
+    implementation "androidx.appcompat:appcompat:$appcompat_version"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+//    implementation 'android.legacy:legacy-support-v4'
+    implementation 'com.google.android.gms:play-services-location:7.5.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2'
-    androidTestCompile 'com.android.support.test.espresso:espresso-web:2.2'
-    androidTestCompile 'com.android.support.test:runner:0.3'
-    androidTestCompile 'com.android.support.test:rules:0.3'
-    androidTestCompile ('com.android.support.test.espresso:espresso-contrib:2.2'){
-        exclude group: 'com.android.support', module: 'appcompat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude module: 'recyclerview-v7'
-    }
+    // Espresso dependencies
+//    androidTestImplementation 'androidx.test.espresso:espresso-core'
+//    androidTestImplementation 'androidx.test.espresso:espresso-web'
+//    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+//    androidTestImplementation 'androidx.test:rules'
+//    androidTestImplementation ('androidx.test.espresso:espresso-contrib:3.1.0'){
+//        exclude group: 'com.android.support', module: 'appcompat'
+//        exclude group: 'com.android.support', module: 'support-v4'
+//        exclude module: 'recyclerview-v7'
+//    }
 }
-configurations.all {
-    // Currently espresso is dependent on support-annotations:22.2.0
-    resolutionStrategy.force 'com.android.support:support-annotations:22.2.1'
-}
+//configurations.all {
+//    // Currently espresso is dependent on support-annotations:22.2.0
+//    resolutionStrategy.force 'com.android.support:support-annotations:22.2.1'
+//}
