--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,10 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:4.0.0'
     }
+}
+
+repositories {
+    google()
 }
